--- a/iot-projects/package.json
+++ b/iot-projects/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "node-json2html": "^2.2.3"
+    "epoll": "^4.0.2",
+    "node-dht-sensor": "^0.4.3",
+    "node-json2html": "^2.2.3",
+    "onoff": "^6.0.3"
   }
 }
